# github-research-rs

./: .cursorrules  Cargo.toml  Dockerfile  LICENSE.md  crates.js  docker-compose.yaml  graphql.config.yml  help.html  index.html  otel-collector-config.yaml  search-index.js  settings.html  src-files.js
.github/workflows/: docs.yml
github_research_rs/: all.html  enum.Commands.html  fn.init_logs.html  fn.init_metrics.html  fn.init_traces.html  fn.main.html  index.html  sidebar-items.js  static.RESOURCE.html  struct.Cli.html
github_research_rs/api/: fn.create_router.html  index.html  sidebar-items.js
github_research_rs/config/: index.html  struct.Config.html
github_research_rs/database/: index.html  sidebar-items.js  struct.CommitDocument.html  struct.CommitSummary.html  struct.MongoDb.html  struct.ReadmeDocument.html
github_research_rs/github/: index.html  sidebar-items.js  struct.CommitAuthor.html  struct.CommitInfo.html  struct.GitHubClient.html  struct.Repository.html
github_research_rs/ml/: index.html  sidebar-items.js  struct.GeminiCandidate.html  struct.GeminiContent2.html  struct.GeminiPart2.html  struct.GeminiResponse.html  struct.MachineLearning.html  struct.OpenAIEmbedding.html  struct.OpenAIEmbeddingRequest.html  struct.OpenAIEmbeddingResponse.html
search.desc/github_research_rs/: github_research_rs-desc-0-.js
src/: api.rs  config.rs  database.rs  github.rs  main.rs  ml.rs
src/api/: openapi.rs  process.rs  search.rs  types.rs
src/github_research_rs/: api.rs.html  config.rs.html  database.rs.html  github.rs.html  main.rs.html  ml.rs.html
(+46 files in other folders)
