[package]
name = "github-research-rs"
version = "0.1.0"
edition = "2021"
license = "BountyBot-Source-Available-1.0"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8.1"
mongodb = { version = "3.2.0" }
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6.12"
color-eyre = "0.6.3"
tracing-error = "0.2.1"
chrono = { version = "0.4.39", features = ["serde"] }
base64 = "0.22.1"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
futures = "0.3.31"
tracing-tracy = "0.11.4"
opentelemetry = { version = "0.28.0", features = ["trace", "tracing"] }
tracing-opentelemetry = "0.29.0"
opentelemetry_sdk = { version = "0.28.0", features = ["trace", "rt-tokio"] }
#opentelemetry-stdout = "0.28.0"
opentelemetry-appender-tracing = "0.28.1"
tracing-appender = "0.2.3"
opentelemetry-otlp = "0.28.0"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.36", features = ["full"] }
